added a hover effect to the button

--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
             </div>
             <button id="property-b">All Property</button>
         </div>
-
-
-        <!-- <div class="service">
+        <div class="service">
             <h2><b>Our Services</b></h2>
             <p>Your comfort is our priority <br><br>Finding you home that you'd love and enjoy staying in is our top priority.Your comfort is key</p>
             <div class="hero">
@@ -142,7 +140,7 @@
                 <img src="images/twitter.png" alt="">
             </div> 
  
-        </div> -->
+        </div>
         
     </div>
 </body>
