complete site built

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <button id="headbutton">Get started</button>
             </div>
         <div class="aboutus">
-            <h2>About us</h2>
-            <p>Building a next generation collaborative platform to connect renter,home owners and agents live the way you want.<span class="lastp"> <br>Beautiful homes incredible locations.Pricing that makes sense </span></p>
+            <h2>About us</h2><br>
+            <p>Building a next generation collaborative platform to connect renter,home owners and agents live the way you want.<span class="lastp"><br> <br>Beautiful homes incredible locations.Pricing that makes sense </span></p>
             <div class="ranking">
                 <div class="frank">
                     <h1>+20k</h1>
@@ -53,7 +53,7 @@
         </div>
         
         <div class="property">
-            <h2>Popular property</h2>
+            <h2>Popular property</h2><br>
             <p>Building a next generation collaborative platform to  <br>connect renters home owners and agents.</p>
             <div class="testimonial">
                 <figure>
@@ -77,7 +77,7 @@
             <div class="hero">
                 <figure>
                     <img src="images/one.jpg" alt="image">
-                    <figcaption><h4>Free Marketing</h4></figcaption>
+                    <figcaption><h5>Free Marketing</h5></figcaption>
                 </figure>
                 <figure>
                     <img src="images/ldy.jpg" alt="image">
@@ -109,7 +109,7 @@
         </div>
         <div class="footer">
             <div class="companyabout">
-                <img src="images/icon.jpg" alt="images" id="icon" ><br>
+                <img src="images/icon.jpg" alt="images" id="footer-icon" ><br>
                 <p id="icon-img">Houston</p>
                 <p>We deliver our clients quality design,<br> develop and implement innovative IT <br> solutions.We have been delivering</p>
             </div>
@@ -132,14 +132,15 @@
                 <p>Features</p><br>
                 <p>Articles</p><br>
                 <p>Press</p><br>
-                <p>Refer</p><br>
-            </div> 
-            <div class="logos">
-                <img src="images/facebook.png" alt="">
-                <img src="images/lnkd.jpg" alt="">
-                <img src="images/twitter.png" alt="">
-            </div> 
- 
+                <p>Refer</p><br>   
+            </div>    
+        </div>
+        <hr>
+        <div class="logos">
+            <img src="images/facebook.png" alt="">
+            <img src="images/lnkd.jpg" alt="">
+            <img src="images/twitter.png" alt="">
+            <p>Copyright @lolabe 2023</p>
         </div>
         
     </div>
